--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   node:
     image: node:20-alpine
@@ -9,7 +7,11 @@ services:
       - node_modules:/app/node_modules
     ports:
       - "3000:3000"
-    command: sh -c "npm install && npm start"
-    
+    environment:
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+    command: sh -c "npm install -g @google/gemini-cli && npm install && tail -f /dev/null"
+    stdin_open: true
+    tty: true
+
 volumes:
   node_modules:
